language/move-lang/tests/move_check/parser/hexstring_missing_quote.move
module M {
    public fun missing_quote(): vector<u8> {
        x"abcd
    }
}
